add mobile layout

--- a/index.html
+++ b/index.html
@@ -16,10 +16,43 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 
     <title>Frontend Mentor | Fylo Data Storage Component</title>
   </head>
   <body>
-    You’ve used 815 GB of your storage 185 GB Left 0 GB 1000 GB
+    <div class="fylo__container">
+      <main class="fylo__main">
+        <div class="fylo__box fylo__box--one">
+          <img src="./images/logo.svg" alt="Fylo" class="fylo__logo" />
+
+          <div class="fylo__wrapper-icons">
+            <div class="fylo__icon fylo__icon--doc"></div>
+            <div class="fylo__icon fylo__icon--folder"></div>
+            <div class="fylo__icon fylo__icon--upload"></div>
+          </div>
+        </div>
+
+        <div class="fylo__box fylo__box--two">
+          <h1 class="fylo__heading">
+            You’ve used <span class="fylo__heading-span">815 GB</span> of your
+            storage
+          </h1>
+
+          <div class="fylo__progress-bar">
+            <div class="fylo__progress-line"></div>
+          </div>
+
+          <div class="fylo__wrapper-text">
+            <p class="fylo__text">0 GB</p>
+            <p class="fylo__text">1000 GB</p>
+          </div>
+
+          <p class="fylo__block">
+            <span class="fylo__block-span">185</span> GB Left
+          </p>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
