add final project

--- a/index.html
+++ b/index.html
@@ -54,5 +54,21 @@
         </div>
       </main>
     </div>
+
+    <footer class="attribution">
+      Challenge by
+      <a
+        class="attribution__link"
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        >Frontend Mentor</a
+      >. Coded by
+      <a
+        class="attribution__link"
+        href="https://github.com/kens-visuals"
+        target="_blank"
+        >Kens-Visuals</a
+      >.
+    </footer>
   </body>
 </html>
